--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/phone.css">
+    <title>Phones</title>
 </head>
 <body>
-    <div class="img-container">
-        <img src="./img/1.avif" alt="auto">
+
+    <div class="containert">
+        <ul>
+            <li><img src="./img_phone/Apple-Logo-768x432.png"> <a href="#">Apple</a>  </li>
+            <li><img src="./img_phone/Huawei-logo-768x432.jpg"> <a href="#">Huawei </a>  </li>
+            <li><img src="./img_phone/OPPO-logo-768x432.jpg"> <a href="#">OPPO </a>  </li>
+            <li><img src="./img_phone/Samsung-logo-768x432.jpg"> <a href="#"> Samsung</a>  </li>
+            
+            <li><img src="./img_phone/Vivo-logo-768x432.jpg"><a href="#"> Vivo</a>  </li>
+        </ul>
     </div>
+    
 </body>
 </html>
